# spaghetteye

./: README.md  log_iotc.txt  package-lock.json  pyproject.toml  requirements.txt  vite.config.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __main__.py  api.py  config.py  events.py  failure_detector.py  ftps_upload.py  mqtt_client.py  printer_control.py  spaghetti_monitor.py
backend/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/spaghettimonster/: detect_once.py  hms.py  main.py  state.py  telegram.py
backend/src/spaghettimonster.egg-info/: top_level.txt
backend/tests/: test_camera_stream.py  test_detect_once.py  test_state.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: CameraTile.vue  EventBadge.vue  LiveDot.vue  ProgressRing.vue  StatusPill.vue
frontend/src/composables/: useDetector.ts  useEventStream.ts  useSnapshot.ts
frontend/src/router/: index.ts
frontend/src/views/: CameraFrame.vue  Dashboard.vue  DetectorPanel.vue  EventLog.vue
src/spaghettimonster/: camera_stream.py  config.py  detect_once.py  main.py  mqtt_client.py  spaghetti_monitor.py  telegram.py
src/spaghettimonster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_mqtt_client.py  test_spaghetti_monitor.py
